changes on desktop issues 1) add variables 2) box shadow issue and btn issue 3) spacing issue service row 4) form input size issue

--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -62,8 +62,8 @@
 				}
 
 				&.active {
-					color: $primary;
-					border-bottom: 2px solid $blue;
+					color: $blue-200;
+					border-bottom: 2px solid $primary;
 					font-weight: bold;
 				}
 			}
