--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -180,10 +180,10 @@
         }
 
         p {
-            @media screen and (max-width: 767px) and (min-width: 320px) {
+          
                 padding-top: 10px;
 
-            }
+            
         }
 
         span {
