--- a/src/scss/components/form.scss
+++ b/src/scss/components/form.scss
@@ -11,9 +11,11 @@
             box-sizing: border-box;
             border-radius: 6px;
             padding:0px 24px;
-            font-size: 14px !important;
+            font-size: 16px !important;
+            border-right: 0px;
             @media screen and (max-width: 767px) and (min-width: 320px) {
                 padding:0px 16px;
+                font-size: 14px !important;
             }
         
             &:focus{
@@ -27,6 +29,7 @@
             height: 54px;
             padding: 15px 32px;
             font-weight: bold;
+            border-radius: 6px;
             @media screen and (max-width: 767px) and (min-width: 320px) {
                 padding: 15px 24px;
             }
